[package]
name = "polkadot-cli"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot Relay-chain Client Node"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.8"
futures = { version = "0.3.4", features = ["compat"] }
structopt = "0.3.8"
sp-api = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
sc-client-api = "2.0.0-rc5"
sc-client-db = "0.8.0-rc5"
sc-executor = "0.8.0-rc5"
service = { package = "polkadot-service", path = "../service", default-features = false, optional = true }
service-new = { package = "polkadot-service-new", path = "../node/service", default-features = false, optional = true }

tokio = { version = "0.2.13", features = ["rt-threaded"], optional = true }
frame-benchmarking-cli = { version = "2.0.0-rc5", optional = true }
sc-cli = { version = "0.8.0-rc5", optional = true }
sc-service = { version = "0.8.0-rc5", optional = true }

wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
browser-utils = { package = "substrate-browser-utils", version = "0.8.0-rc5", optional = true }

[build-dependencies]
substrate-build-script-utils = "2.0.0-rc5"

[features]
default = [ "wasmtime", "db", "cli", "service-old" ]
wasmtime = [ "sc-cli/wasmtime" ]
db = [ "service/db" ]
cli = [
	"tokio",
	"sc-cli",
	"sc-service",
	"frame-benchmarking-cli",
]
service-old = [ "service/full-node" ]
browser = [
	"wasm-bindgen",
	"wasm-bindgen-futures",
	"browser-utils",
	"service",
]
runtime-benchmarks = [ "service/runtime-benchmarks" ]
service-rewr = [ "service-new/full-node" ]
