[package]
name = "polkadot-collator"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.4"
sc-service = "0.8.0-rc5"
sc-executor = "0.8.0-rc5"
sc-cli = "0.8.0-rc5"
sc-client-api = "2.0.0-rc5"
sc-network = "0.8.0-rc5"
sp-blockchain = "2.0.0-rc5"
sp-api = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
consensus_common = { package = "sp-consensus", version = "0.8.0-rc5" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service", optional = true}
polkadot-service-new = { path = "../node/service", optional = true }
log = "0.4.8"
tokio = "0.2.13"
futures-timer = "2.0"
codec = { package = "parity-scale-codec", version = "1.3.0" }

[dev-dependencies]
keyring = { package = "sp-keyring", version = "2.0.0-rc5" }

[features]
default = ["service-old"]
service-old = [ "polkadot-service" ]
service-rewr = [ "polkadot-service-new" ]
