[package]
name = "polkadot-core-primitives"
version = "0.7.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sp-core = { version = "2.0.0-rc5", default-features = false }
sp-std = { version = "2.0.0-rc5", default-features = false }
sp-runtime = { version = "2.0.0-rc5", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"codec/std",
]
