[package]
name = "polkadot-erasure-coding"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
primitives = { package = "polkadot-primitives", path = "../primitives" }
reed_solomon = { package = "reed-solomon-erasure", version = "4.0.2"}
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-core = "2.0.0-rc5"
trie = { package = "sp-trie", version = "2.0.0-rc5" }
derive_more = "0.15.0"
