[package]
name = "polkadot-network"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot-specific networking protocol"
edition = "2018"

[dependencies]
arrayvec = "0.4.12"
bytes = "0.5"
parking_lot = "0.9.0"
derive_more = "0.14.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
polkadot-validation = { path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sc-network = "0.8.0-rc5"
sc-network-gossip = "0.8.0-rc5"
sp-core = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
futures = "0.3.5"
log = "0.4.8"
exit-future = "0.2.0"
futures-timer = "2.0"
sp-blockchain = "2.0.0-rc5"
sp-api = "2.0.0-rc5"
wasm-timer = "0.2.4"
rand = "0.7.3"

[dev-dependencies]
sp-keyring = "2.0.0-rc5"
sp-state-machine = "0.8.0-rc5"
