[package]
name = "polkadot-parachain"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Types and utilities for creating and working with parachains"
edition = "2018"

[dependencies]
# note: special care is taken to avoid inclusion of `sp-io` externals when compiling
# this crate for WASM. This is critical to avoid forcing all parachain WASM into implementing
# various unnecessary Substrate-specific endpoints.
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = [ "derive" ] }
sp-std = { package = "sp-std", version = "2.0.0-rc5", default-features = false }
sp-core = { version = "2.0.0-rc5", default-features = false }
sp-wasm-interface = { version = "2.0.0-rc5", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }

# all optional crates.
derive_more = { version = "0.99.2", optional = true }
serde = { version = "1.0.102", default-features = false, features = [ "derive" ], optional = true }
sp-externalities = { version = "0.8.0-rc5", optional = true }
sc-executor = { version = "0.8.0-rc5", optional = true }
sp-io = { version = "2.0.0-rc5", optional = true }
parking_lot = { version = "0.10.0", optional = true }
log = { version = "0.4.8", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
shared_memory = { version = "0.10.0", optional = true }

[features]
default = ["std"]
wasm-api = []
std = [
	"codec/std",
	"derive_more",
	"serde/std",
	"sp-std/std",
	"shared_memory",
	"sp-core/std",
	"parking_lot",
	"log",
	"sp-externalities",
	"sc-executor",
	"sp-io",
	"polkadot-core-primitives/std",
]
