[package]
name = "polkadot-primitives"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.102", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.3.0", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", version = "2.0.0-rc5", default-features = false }
inherents = { package = "sp-inherents", version = "2.0.0-rc5", default-features = false }
application-crypto = { package = "sp-application-crypto", version = "2.0.0-rc5", default-features = false }
sp-api = { version = "2.0.0-rc5", default-features = false }
sp-version = { version = "2.0.0-rc5", default-features = false }
sp-std = { package = "sp-std", version = "2.0.0-rc5", default-features = false }
sp-staking = { version = "2.0.0-rc5", default-features = false }
sp-arithmetic = { version = "2.0.0-rc5", default-features = false }
runtime_primitives = { package = "sp-runtime", version = "2.0.0-rc5", default-features = false }
polkadot-parachain = { path = "../parachain", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "sp-trie", version = "2.0.0-rc5", default-features = false }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
frame-system = { version = "2.0.0-rc5", default-features = false }

[dev-dependencies]
sp-serializer = "2.0.0-rc5"
pretty_assertions = "0.5.1"

[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"sp-std/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"bitvec/std",
	"frame-system/std",
]
