[package]
name = "polkadot-rpc"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = "2.0.0-rc5"
sp-blockchain = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
sp-api = "2.0.0-rc5"
sp-consensus = "0.8.0-rc5"
sp-consensus-babe = "0.8.0-rc5"
sc-rpc = "2.0.0-rc5"
sc-consensus-babe = "0.8.0-rc5"
sc-consensus-babe-rpc = "0.8.0-rc5"
sc-consensus-epochs = "0.8.0-rc5"
sc-finality-grandpa = "0.8.0-rc5"
sc-finality-grandpa-rpc = "0.8.0-rc5"
sc-keystore = "2.0.0-rc5"
txpool-api = { package = "sp-transaction-pool", version = "2.0.0-rc5" }
frame-rpc-system = { package = "substrate-frame-rpc-system", version = "2.0.0-rc5"  }
pallet-transaction-payment-rpc = "2.0.0-rc5"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-block-builder = "2.0.0-rc5"
