[package]
name = "polkadot-statement-table"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-core = "2.0.0-rc5"
primitives = { package = "polkadot-primitives", path = "../primitives" }
