[package]
name = "polkadot-validation"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
futures = "0.3.4"
futures-timer = "2.0"
parking_lot = "0.9.0"
tokio = { version = "0.2.13", features = ["rt-core", "blocking"] }
derive_more = "0.14.1"
log = "0.4.8"
exit-future = "0.2.0"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
availability_store = { package = "polkadot-availability-store", path = "../availability-store" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
table = { package = "polkadot-statement-table", path = "../statement-table" }
grandpa = { package = "sc-finality-grandpa", version = "0.8.0-rc5" }
inherents = { package = "sp-inherents", version = "2.0.0-rc5" }
consensus = { package = "sp-consensus", version = "0.8.0-rc5" }
primitives = { package = "sp-core", version = "2.0.0-rc5" }
txpool-api = { package = "sp-transaction-pool", version = "2.0.0-rc5" }
sp-blockchain = "2.0.0-rc5"
sp-api = "2.0.0-rc5"
sc-client-api = "2.0.0-rc5"
sp-timestamp = "2.0.0-rc5"
block-builder = { package = "sc-block-builder", version = "0.8.0-rc5" }
trie = { package = "sp-trie", version = "2.0.0-rc5" }
runtime_primitives = { package = "sp-runtime", version = "2.0.0-rc5" }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
runtime_babe = { package = "pallet-babe", version = "2.0.0-rc5" }
babe-primitives = { package = "sp-consensus-babe", version = "0.8.0-rc5" }
keystore = { package = "sc-keystore", version = "2.0.0-rc5" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.8.0-rc5" }
sc-basic-authorship = "0.8.0-rc5"

[dev-dependencies]
sp-keyring = "2.0.0-rc5"
