[package]
name = "polkadot-network-test"
version = "0.8.19"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.10.0"
futures = "0.3.1"
rand = "0.7.2"
sc-consensus = "0.8.0-rc5"
sc-network = "0.8.0-rc5"
sc-service = { version = "0.8.0-rc5", features = ["test-helpers"] }
#sc-network-test = "0.8.0-rc5"
sp-consensus = "0.8.0-rc5"
sc-client-api = "2.0.0-rc5"
sp-blockchain = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sc-block-builder = "0.8.0-rc5"
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
