[package]
name = "polkadot-service-new"
version = "0.8.3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.4"
slog = "2.5.2"
hex-literal = "0.2.1"
polkadot-primitives = { path = "../../primitives" }
polkadot-runtime = { path = "../../runtime/polkadot" }
polkadot-overseer = { path = "../overseer" }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../subsystem" }
kusama-runtime = { path = "../../runtime/kusama" }
westend-runtime = { path = "../../runtime/westend" }
polkadot-network = { path = "../../network", optional = true }
polkadot-rpc = { path = "../../rpc" }
polkadot-node-core-proposer = { path = "../core/proposer" }
sp-io = "2.0.0-rc5"
sp-api = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
sp-blockchain = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sc-client-api = "2.0.0-rc5"
sc-client-db = "0.8.0-rc5"
sc-chain-spec = "2.0.0-rc5"
sc-executor = "0.8.0-rc5"
sc-consensus = "0.8.0-rc5"
sc-network = "0.8.0-rc5"
sp-trie = "2.0.0-rc5"
consensus_common = { package = "sp-consensus", version = "0.8.0-rc5" }
grandpa = { package = "sc-finality-grandpa", version = "0.8.0-rc5" }
grandpa_primitives = { package = "sp-finality-grandpa", version = "2.0.0-rc5" }
inherents = { package = "sp-inherents", version = "2.0.0-rc5" }
service = { package = "sc-service", version = "0.8.0-rc5", default-features = false }
telemetry = { package = "sc-telemetry", version = "2.0.0-rc5" }
sc-block-builder = "0.8.0-rc5"
sc-transaction-pool = "2.0.0-rc5"
sp-transaction-pool = "2.0.0-rc5"
sc-keystore = "2.0.0-rc5"
pallet-babe = "2.0.0-rc5"
pallet-staking = "2.0.0-rc5"
im-online = { package = "pallet-im-online", version = "2.0.0-rc5" }
authority-discovery = { package = "sc-authority-discovery", version = "0.8.0-rc5" }
authority-discovery-primitives = { package = "sp-authority-discovery", version = "2.0.0-rc5" }
babe = { package = "sc-consensus-babe", version = "0.8.0-rc5" }
babe-primitives = { package = "sp-consensus-babe", version = "0.8.0-rc5" }
sp-block-builder = "2.0.0-rc5"
pallet-transaction-payment-rpc-runtime-api = "2.0.0-rc5"
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", version = "2.0.0-rc5" }
codec = { package = "parity-scale-codec", version = "1.3.0" }
sp-session = "2.0.0-rc5"
sp-offchain = { package = "sp-offchain", version = "2.0.0-rc5" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.8.0-rc5" }
frame-benchmarking = "2.0.0-rc5"

[dev-dependencies]
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
sc-block-builder = "0.8.0-rc5"
env_logger = "0.7.0"

[features]
default = ["db", "full-node"]
db = ["service/db"]
runtime-benchmarks = ["polkadot-runtime/runtime-benchmarks", "kusama-runtime/runtime-benchmarks", "westend-runtime/runtime-benchmarks"]
full-node = []
