[package]
name = "polkadot-test-service"
version = "0.8.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4"
log = "0.4.8"
rand = "0.7.3"
tempfile = "3.1.0"

# Polkadot dependencies
av_store = { package = "polkadot-availability-store", path = "../../availability-store" }
consensus = { package = "polkadot-validation", path = "../../validation" }
polkadot-network = { path = "../../network" }
polkadot-primitives = { path = "../../primitives" }
polkadot-rpc = { path = "../../rpc" }
polkadot-runtime-common = { path = "../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-test-runtime = { path = "../../runtime/test-runtime" }

# Substrate dependencies
authority-discovery = { package = "sc-authority-discovery", version = "0.8.0-rc5" }
babe = { package = "sc-consensus-babe", version = "0.8.0-rc5" }
babe-primitives = { package = "sp-consensus-babe", version = "0.8.0-rc5" }
consensus_common = { package = "sp-consensus", version = "0.8.0-rc5" }
frame-benchmarking = "2.0.0-rc5"
frame-system = "2.0.0-rc5"
grandpa = { package = "sc-finality-grandpa", version = "0.8.0-rc5" }
grandpa_primitives = { package = "sp-finality-grandpa", version = "2.0.0-rc5" }
inherents = { package = "sp-inherents", version = "2.0.0-rc5" }
pallet-staking = "2.0.0-rc5"
pallet-transaction-payment = "2.0.0-rc5"
sc-chain-spec = "2.0.0-rc5"
sc-client-api = "2.0.0-rc5"
sc-consensus = "0.8.0-rc5"
sc-executor = "0.8.0-rc5"
sc-informant = "0.8.0-rc5"
sc-network = "0.8.0-rc5"
sc-transaction-pool = "2.0.0-rc5"
service = { package = "sc-service", version = "0.8.0-rc5", default-features = false }
sp-arithmetic = "2.0.0-rc5"
sp-blockchain = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sp-keyring = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
sp-state-machine = "0.8.0-rc5"
#substrate-test-client = "2.0.0-rc5"

[dev-dependencies]
pallet-balances = { version = "2.0.0-rc5", default-features = false }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
