[package]
name = "polkadot-runtime-parachains"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
log = { version = "0.3.9", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }

sp-api = { version = "2.0.0-rc5", default-features = false }
inherents = { package = "sp-inherents", version = "2.0.0-rc5", default-features = false }
sp-std = { package = "sp-std", version = "2.0.0-rc5", default-features = false }
sp-io = { version = "2.0.0-rc5", default-features = false }
sp-runtime = { version = "2.0.0-rc5", default-features = false }
sp-session = { version = "2.0.0-rc5", default-features = false }
sp-staking = { version = "2.0.0-rc5", default-features = false }
sp-core = { version = "2.0.0-rc5", default-features = false }

authorship = { package = "pallet-authorship", version = "2.0.0-rc5", default-features = false }
balances = { package = "pallet-balances", version = "2.0.0-rc5", default-features = false }
session = { package = "pallet-session", version = "2.0.0-rc5", default-features = false }
frame-support = { version = "2.0.0-rc5", default-features = false }
staking = { package = "pallet-staking", version = "2.0.0-rc5", default-features = false }
system = { package = "frame-system", version = "2.0.0-rc5", default-features = false }
timestamp = { package = "pallet-timestamp", version = "2.0.0-rc5", default-features = false }
vesting = { package = "pallet-vesting", version = "2.0.0-rc5", default-features = false }
offences = { package = "pallet-offences", version = "2.0.0-rc5", default-features = false }
frame-benchmarking = { version = "2.0.0-rc5", default-features = false, optional = true }

primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
libsecp256k1 = { version = "0.3.2", default-features = false, optional = true }

rand = { version = "0.7", default-features = false }
rand_chacha = { version = "0.2.2", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
keyring = { package = "sp-keyring", version = "2.0.0-rc5" }
sp-trie = "2.0.0-rc5"
babe = { package = "pallet-babe", version = "2.0.0-rc5" }
sp-application-crypto = "2.0.0-rc5"
randomness-collective-flip = { package = "pallet-randomness-collective-flip", version = "2.0.0-rc5" }
pallet-staking-reward-curve = "2.0.0-rc5"
treasury = { package = "pallet-treasury", version = "2.0.0-rc5" }
serde_json = "1.0.41"
libsecp256k1 = "0.3.2"
sp-version = { version = "2.0.0-rc5", default-features = false }


[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"codec/std",
	"log",
	"rustc-hex/std",
	"serde_derive",
	"serde/std",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"authorship/std",
	"balances/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"session/std",
	"staking/std",
	"system/std",
	"timestamp/std",
	"vesting/std",
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"system/runtime-benchmarks",
]
