[package]
name = "polkadot-node-core-proposer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures-timer = "3.0.1"
log = "0.4.8"
parity-scale-codec = "1.3.0"
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
sc-basic-authorship = "0.8.0-rc5"
sc-block-builder = "0.8.0-rc5"
sc-client-api = "2.0.0-rc5"
sc-telemetry = "2.0.0-rc5"
sp-api = "2.0.0-rc5"
sp-blockchain = "2.0.0-rc5"
sp-consensus = "0.8.0-rc5"
sp-core = "2.0.0-rc5"
sp-inherents = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
sp-transaction-pool = "2.0.0-rc5"
tokio-executor = { version = "0.2.0-alpha.6", features = ["blocking"] }
wasm-timer = "0.2.4"
