[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
futures = "0.3.1"
codec = { package = "parity-scale-codec", version = "1.0.0" }

# Polkadot dependencies
polkadot-primitives = { path = "../../../primitives" }
polkadot-runtime-common = { path = "../../common" }
polkadot-test-runtime = { path = ".." }
polkadot-test-service = { path = "../../../node/test-service" }

# Substrate dependencies
pallet-timestamp = "2.0.0-rc5"
sc-block-builder = "0.8.0-rc5"
sc-client-api = "2.0.0-rc5"
sc-consensus = "0.8.0-rc5"
sc-light = "2.0.0-rc5"
sc-service = { version = "0.8.0-rc5", features = ["test-helpers"],  default-features = false }
sp-api = "2.0.0-rc5"
sp-blockchain = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
#substrate-test-client = "0.8.0-rc5"
